added font sizes hehe

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -28,5 +28,6 @@ footer#actual-footer{
         text-align: center;
         padding: 20px;
         color: rgb(100, 100, 100);
+        font-size: 32px;
     }
 }
