--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -25,6 +25,7 @@ footer#actual-footer .footer.note {
   text-align: center;
   padding: 20px;
   color: rgb(100, 100, 100);
+  font-size: 32px;
 }
 
 /*# sourceMappingURL=footer.css.map */
