--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -25,7 +25,7 @@
             <% }) %>
             </ul>
             <% if (user.admin) { %>
-            <h2>Auth Service Tools</h2>
+            <h2>Authly Tools</h2>
             <ul class="list">
                 <li class="card">
                     <a href="/users" class="title">Users</a>
