--- a/src/pages/partials/nav.ejs
+++ b/src/pages/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="site-nav">
   <div class="nav-inner">
-    <div class="brand"><a href="/">Auth Service</a></div>
+    <div class="brand"><a href="/">Authly</a></div>
     <ul class="nav-links">
       <% if (user && user.permissions) { %>
         <li><a href="/">Home</a></li>
