fixed up footer

--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -46,6 +46,6 @@
             </div>
         </div>
     </main>
-    <%- include("partials/footer.ejs") %>
+    <%- include("partials/footer.ejs", {user:user}) %>
 </body>
 </html>
