--- a/src/pages/public.ejs
+++ b/src/pages/public.ejs
@@ -27,7 +27,7 @@
         <main class="content">
             <%- content %>
         </main>
-        <%- include("partials/footer.ejs") %>
+        <%- include("partials/footer.ejs", {user:user}) %>
     </div>
 </body>
 </html>
