--- a/src/pages/partials/footer.ejs
+++ b/src/pages/partials/footer.ejs
@@ -5,7 +5,7 @@
             <h3>Authly Admin</h3>
 
             <p><a href="/redirect/admin/user_management">User Management</a></p>
-            <p><a href="/redirect/admin/project_management">Project Management</a></p>
+            <%/* %><p><a href="/redirect/admin/project_management">Project Management</a></p><%*/ %>
         </div>
         <% } %>
         <div class="authly public">
@@ -19,7 +19,7 @@
             <h3>Authly General</h3>
 
             <p><a href="/redirect/admin/projects">Projects</a></p>
-            <p><a href="/redirect/admin/project_management">Organizations</a></p>
+            <%/* %><p><a href="/redirect/admin/project_management">Organizations</a></p><% */ %>
         </div>
         <% } %>
 
